blueprints/hoarder/statefulset.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: hoarder
spec:
  replicas: 1
  serviceName: hoarder
  template:
    spec:
      containers:
        - env:
            - name: S6_READ_ONLY_ROOT
              value: "1"
          image: ghcr.io/hoarder-app/hoarder
          name: hoarder
          ports:
            - containerPort: 3000
              name: http
          terminationMessagePolicy: FallbackToLogsOnError
          volumeMounts:
            - mountPath: /data
              name: data
              subPath: hoarder
        - env:
            - name: MEILI_NO_ANALYTICS
              value: "true"
          image: getmeili/meilisearch
          name: meilisearch
          ports:
            - containerPort: 7700
              name: meilisearch
          restartPolicy: Always
          volumeMounts:
            - mountPath: /meili_data
              name: data
              subPath: meilisearch
      serviceAccountName: hoarder
      terminationGracePeriodSeconds: 10
      volumes:
        - configMap:
            defaultMode: 0440
            name: hoarder-config
            optional: false
          name: hoarder-config
        - hostPath:
            path: /var/run/dbus
            type: Directory
          name: dbus
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 10Gi
        storageClassName: hcloud-volumes-encrypted
