blueprints/hoarder/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hoarder
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: http
      name: http
    - port: 7700
      protocol: TCP
      targetPort: meilisearch
      name: meilisearch
