blueprints/hoarder/ciliumnetworkpolicy.yml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: hoarder
spec:
  endpointSelector:
    matchLabels: {}
  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
            - port: "7700"
              protocol: TCP
          rules:
            http: [{}]
